--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+streamlit>=1.28.0
 google-genai
 google-generativeai
 groq
 agno
 pymongo
 duckduckgo-search
-streamlit
-
+# Additional dependencies for enhanced functionality
+watchdog>=3.0.0
+psutil>=5.9.0
+requests>=2.31.0
